tests/ui/parse_function_is_not_path.stderr
error: proc-macro derive panicked
  --> $DIR/parse_function_is_not_path.rs:13:10
   |
13 | #[derive(StructOpt, Debug)]
   |          ^^^^^^^^^
   |
   = help: message: parser function path: Error("expected identifier")
